--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -37,7 +37,7 @@
 	}
 
 	.dark {
-		--background: 0 0% 3.9%;
+		--background: 344 85% 3%;
 		--foreground: 0 0% 98%;
 
 		--muted: 0 0% 14.9%;
@@ -49,10 +49,10 @@
 		--card: 0 0% 3.9%;
 		--card-foreground: 0 0% 98%;
 
-		--border: 0 0% 14.9%;
-		--input: 0 0% 14.9%;
+		--border: 344 85% 57%;
+		--input: 344 85% 57%;
 
-		--primary: 0 0% 98%;
+		--primary: 344 85% 57%;
 		--primary-foreground: 0 0% 9%;
 
 		--secondary: 0 0% 14.9%;
@@ -76,4 +76,14 @@
 	body {
 		@apply bg-background text-foreground;
 	}
+}
+
+@font-face {
+	font-family: "Axis";
+	src: url(/src/assets/fonts/axis.otf);
+}
+
+@font-face {
+	font-family: "Carter One";
+	src: url(/src/assets/fonts/carterone.ttf);
 }
