Add new UI components for label and number field, and include additional font faces

--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -128,3 +128,13 @@
 	font-family: "WOOJOOAIDP";
 	src: url(/src/assets/fonts/woojooaidp.ttf)
 }
+
+@font-face {
+	font-family: "Genos";
+	src: url(/src/assets/fonts/genos.ttf)
+}
+
+@font-face {
+	font-family: "Chakra Petch";
+	src: url(/src/assets/fonts/chakrapetch.ttf)
+}
